--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="semaphore.com.semaphorebetterorworse" >
 
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.BLUETOTH"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,11 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
+         <category android:name="android.intent.category.LAUNCHER" />
     </application>
+
 
     <!-- Declares the input method service -->
     <service android:name="SemaphorIME"
